methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:2: error: object java.awt.Color is not a value
def isFacingTrail():Boolean = {var c=Color ;avance();c = getCouleurSol();recule(); if (c == Color.green) {return(true);} else {return(false);};
                                     ^