methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {var c=Color ;avance();c = getCouleurSol();recule(); if (c == Color.green) {return(true);} else {return(false);};
    // Write your code here
}